--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vueperslides": "^2.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
