--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
+    "hooper": "^0.3.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3",
-    "vueperslides": "^2.8.0"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
