--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-component": "^1.1.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
+    "element-ui": "^2.13.0",
     "hooper": "^0.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3"
